--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
-	<body>
-			First lesson 
+
+	<body class="homepage">
+
+
+			<p>First lesson </p>
+	
+
+<a href="page.html">На 2-ю страницу</a>
 		</body>
+
+
 </html>
