--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <html>
 
+<head>
+	<link rel="stylesheet" href="styles.css">
+
+</head>
+
 	<body class="homepage">
 
 
 			<p>First lesson </p>
 	
+
+			<h1 class="main">ggwp</h1>
+
+<b>
+			<li style="font: caption;">213123</li>
+			<li>46464</li>
+			<li style="color: lawngreen">TL55</li>
+			<li>L776</li>
+			<li>L5758D</li>
+
+
+</b>
 
 <a href="page.html">На 2-ю страницу</a>
 		</body>
