--- a/homework334.html
+++ b/homework334.html
@@ -2,18 +2,32 @@
 <head>
     <meta charset="UTF-8">
 <style>
-    h1{
+    h2{
         color: red;
         text-align: center;
     }
-    h2 {
+    h3 {
         color:green;
     }
-    ol, b {
+    b{
+        font-size: 20px;
+        color: red;
+    }
+    ol  {
         color: red;
     }
     i {
         color: blue;
+    }
+    p{
+        font: 12px/20px Arial;
+        width: 400px;
+
+    }
+    ul{
+        width: 400px;
+        color: palevioletred;
+        font-style: italic;
     }
 </style>
 
@@ -21,11 +35,11 @@
 
 <body>
 
-<b> <h1>   Что нужно знать, чтобы делать сайты </h1> </b>
+<b> <h2>   Что нужно знать, чтобы делать сайты </h2> </b>
 
 
 <ol>
-    <li>    <b>HTML</b>
+    <li><b>HTML</b>
     <li><i>CSS</i>
     <li>PHP
     <li>SQL
@@ -36,21 +50,23 @@
 
 </ol>
 
-<b> <h2> PHP и JavaScript   </h2> </b>
+<b> <h3> PHP и JavaScript   </h3> </b>
 
 
-Языки программирования <b>PHP</b> и <b>JavaScript</b> позволяют сделать сайт динамичным, то есть реагирующим на действия пользователя. Например, можно сделать красивую выпадающую менюшку или слайдер
+<p>Языки программирования <b>PHP</b> и <b>JavaScript</b> позволяют сделать сайт динамичным, то есть реагирующим на действия пользователя. Например, можно сделать красивую выпадающую менюшку или слайдер</p>
 
 
-<b> <h2>Виды скриптов    </h2> </b>
+<b> <h3>Виды скриптов </h3> </b>
 
 
-Для этого пишутся скрипты (англ. <i>script</i> - «сценарий») - программы, позволяющие реагировать на действия пользователя. Скрипты бывают двух видов:
+<p>Для этого пишутся скрипты (англ. <i>script</i> - «сценарий») - программы, позволяющие реагировать на действия пользователя. Скрипты бывают двух видов:
 <ul>
-    <li>те, которые выполняются на сервере, а результат их выполнения приходит в браузер к пользователю уже в готовом виде. Это скрипты, написанные на языке <b>PHP</b>. На нем пишуться <b>CMS-ки</b> – системы управления контентом.
+    <li>те, которые выполняются на сервере, а результат их выполнения приходит в браузер к пользователю уже в готовом виде. Это скрипты, написанные на языке <b>PHP</b>. На нем пишуться <b>CMS-ки</b> – системы управления контентом.</li>
 
-    <li>те, которые выполняются прямо в браузере пользователя. Это скрипты, написанные на языке <b>JavaScript</b>. Они чаще всего используются для, того чтобы сделать страницу более удобной и красивой.
+    <li>те, которые выполняются прямо в браузере пользователя. Это скрипты, написанные на языке <b>JavaScript</b>. Они чаще всего используются для, того чтобы сделать страницу более удобной и красивой.</li>
 </ul>
+
+</p>
 
 </body>
 </html>
