--- a/homework4.html
+++ b/homework4.html
@@ -9,22 +9,39 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <title>Hello, world!</title>
+<style>
+    body{
+        font-family: Arial;
+    }
 
+</style>
 
 </head>
 <body>
 
-<div class="row">
-    <div class="col"><b>Регистрация</b></div>
-    <div class="col"><b>Что дает регистрация</b></div>
-    <div class="w-100"></div>
-    <div class="col">
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item active" aria-current="page"><a href="#">Home</a></li>
+        <li class="breadcrumb-item"><a href="#">Documentation</a></li>
+        <li class="breadcrumb-item"><a href="#">Examples</a></li>
+        <li class="breadcrumb-item"><a href="#">Themes</a></li>
+        <li class="breadcrumb-item"><a href="#">Jobs</a></li>
+        <li class="breadcrumb-item"><a href="#">Expo</a></li>
+        <li class="breadcrumb-item"><a href="#">Blog</a></li>
+        </li>
+    </ol>
+</nav>
 
+<div class="row">
+
+    <div class="w-100"></div>
+    <div class="col"><h2>Регистрация</h2>
 
 
 
 <form>
     <div class="form-group row">
+
         <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
             <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
@@ -37,10 +54,9 @@
         </div>
     </div>
 
-
-
     <div class="form-group row">
-        <div class="col-sm-10">
+        <div class="col-sm-2">  </div>
+                <div class="col-sm-10">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="gridCheck1">
                 <label class="form-check-label" for="gridCheck1">
@@ -49,6 +65,8 @@
                             </div>
         </div>
     </div>
+
+
 
 
     <div class="form-group row">
@@ -65,13 +83,19 @@
     </div>
 
     <div class="form-group row">
+        <div class="col-sm-2">  </div>
         <div class="col-sm-10">
+
             <button type="submit" class="btn btn-primary">Зарегестрироваться</button>
+
+
         </div>
     </div>
 
     </div>
-    <div class="col-6">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</div>
+
+    <div class="col-6"><h2>Что дает регистрация</h2>
+        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</div>
 
 </div>
 </form>
