homework 4.1, (add основные задачи)

--- a/Homework4-2-2-1.html
+++ b/Homework4-2-2-1.html
@@ -8,21 +8,21 @@
 
 <body>
 
-
 <script>
 
-var age;
-age = 25;
+    var arr = [], x1 = '';
 
-alert ('Мне');
-alert (age);
-alert ('лет!');
+    for (var i = 0; i < 10; i++) {
+
+        x1 += 'x';
+
+        arr.push(x1);
+
+    }
+
+    console.log(arr);
+
 
 </script>
-
-
-
-
 </body>
-
 </html>
