--- a/Homework4-2-4.html
+++ b/Homework4-2-4.html
@@ -8,20 +8,19 @@
 
 <body>
 
-
 <script>
 
-var age;
-age = 25;
+    var i = 0, str = '';
+    while (i < 20) {
 
-alert ('Мне');
-alert (age);
-alert ('лет!');
+        i++;
+
+        str += 'x';
+        document.write(str + '<br>');
+
+    }
 
 </script>
-
-
-
 
 </body>
 
