--- a/Homework4-2-5.html
+++ b/Homework4-2-5.html
@@ -8,21 +8,19 @@
 
 <body>
 
-
 <script>
 
-var age;
-age = 25;
+    for (var i = 0; i <= 9; i++) {
 
-alert ('Мне');
-alert (age);
-alert ('лет!');
+        for (var j = 1; j <= i; j++) {
+
+            document.write(i);
+
+        }
+
+        document.write('<br>');
+    }
 
 </script>
-
-
-
-
 </body>
-
 </html>
