--- a/Homework4-2-2.html
+++ b/Homework4-2-2.html
@@ -11,12 +11,16 @@
 
 <script>
 
-var age;
-age = 25;
+    var i = 0, a = '';
+    while (i < 9) {
 
-alert ('Мне');
-alert (age);
-alert ('лет!');
+        i++;
+
+      a += i;
+
+    }
+
+    alert (a);
 
 </script>
 
