--- a/Homework5.html
+++ b/Homework5.html
@@ -7,8 +7,10 @@
 <body>
 
 
+<h2> Rezult</h2>
 
-
+<script src="Homework5-1.js"></script>
+<script src="Homework5-2.js"></script>
 <script src="Homework5-3.js"></script>
 
 </body>
