--- a/homework4.html
+++ b/homework4.html
@@ -8,10 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Homework</title>
 <style>
     body{
         font-family: Arial;
+    }
+    div{
+        text-align: left;
     }
 
 </style>
@@ -28,77 +31,81 @@
         <li class="breadcrumb-item"><a href="#">Jobs</a></li>
         <li class="breadcrumb-item"><a href="#">Expo</a></li>
         <li class="breadcrumb-item"><a href="#">Blog</a></li>
-        </li>
     </ol>
 </nav>
 
-<div class="row">
+<div class="container">
+    <div class="row">
+         <div class="col-6">
+             <form action="" method="GET">
+                    <h2>Регистрация</h2>
 
-    <div class="w-100"></div>
-    <div class="col"><h2>Регистрация</h2>
-
-
-
-<form>
     <div class="form-group row">
 
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+        <label for="inputEmail1" class="col-sm-2 col-form-label">Email</label>
+        <div class="col-sm-6">
+            <input type="email" class="form-control" id="inputEmail1" placeholder="Email">
         </div>
     </div>
     <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Пароль</label>
+        <label for="inputPassword1" class="col-sm-2 col-form-label">Пароль</label>
         <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Пароль">
+            <input type="password" class="form-control" id="inputPassword1" placeholder="Пароль">
         </div>
     </div>
 
     <div class="form-group row">
-        <div class="col-sm-2">  </div>
-                <div class="col-sm-10">
+        <div class="col-sm-6 col-form-label offset-sm-2">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="gridCheck1">
                 <label class="form-check-label" for="gridCheck1">
                     <b>Показать пароль</b>
                 </label>
-                            </div>
-        </div>
-    </div>
-
-
-
-
-    <div class="form-group row">
-        <label for="inputEmail3" class="col-sm-2 col-form-label">Имя</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="inputEmail3" placeholder="Имя">
-        </div>
-    </div>
-    <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Фамилия</label>
-        <div class="col-sm-10">
-            <input type="password" class="form-control" id="inputPassword3" placeholder="Фамилия">
+            </div>
         </div>
     </div>
 
     <div class="form-group row">
-        <div class="col-sm-2">  </div>
+        <label class="col-sm-2 col-form-label">Имя</label>
+          <div class="col-sm-6">
+            <input type="text" class="form-control" placeholder="Имя">
+          </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Фамилия</label>
         <div class="col-sm-10">
-
-            <button type="submit" class="btn btn-primary">Зарегестрироваться</button>
-
-
+            <input type="text" class="form-control" placeholder="Фамилия">
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-sm-6 offset-sm-2">
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Зарегестрироваться</button>
+            </div>
+        </div>
     </div>
-
-    <div class="col-6"><h2>Что дает регистрация</h2>
-        Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков, но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker, в шаблонах которых используется Lorem Ipsum.</div>
-
-</div>
 </form>
+         </div>
+
+    <div class="col-6">
+        <h2>Что дает регистрация</h2>
+       <div>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.
+           Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.
+           В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов,
+           используя Lorem Ipsum для распечатки образцов. Lorem Ipsum не только успешно пережил без заметных изменений пять веков,
+           но и перешагнул в электронный дизайн. Его популяризации в новое время послужили публикация листов Letraset
+           с образцами Lorem Ipsum в 60-х годах и, в более недавнее время, программы электронной вёрстки типа Aldus PageMaker,
+           в шаблонах которых используется Lorem Ipsum.
+       </div>
+
+    </div>
+
+
+    </div>
+</div>
+
+
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
