--- a/Homework5.html
+++ b/Homework5.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
 
+
 <h2>Rezultat</h2>
-<script src="Homework5-1.js"></script>
-<script src="Homework5-2.js"></script>
-<script src="Homework5-3.js"></script>
+<script class="DZ5" src="Homework5-1.js"></script>
+<script class="DZ5" src="Homework5-2.js"></script>
+<script class="DZ5" src="Homework5-3.js"></script>
 
 </body>
 </html>
